# smartr

./: .gitignore
backend/: personas.json  personas.txt
backend/api/: api.py  pyproject.toml
backend/argocd/: ingress.yaml
backend/supabase/project/: analytics-deployment.yaml  analytics-service.yaml  auth-deployment.yaml  db-deployment.yaml  functions-deployment.yaml  imgproxy-deployment.yaml  kong-deployment.yaml  kong-service.yaml  meta-deployment.yaml  realtime-deployment.yaml  rest-deployment.yaml  storage-deployment.yaml  studio-deployment.yaml  supavisor-deployment.yaml  supavisor-service.yaml  vector-deployment.yaml
frontend/: bubble.html  pyproject.toml
frontend/pages/: 1_Home.py  2_Dashboard.py  admin.py  super-admin.py  user.py
frontend/smartr/: app.py  menu.py  pyproject.toml
frontend/smartr/public/: custom_audio.html
frontend/starter/: pyproject.toml
frontend/ui/: pyproject.toml
frontend/ui/.starter/pages/styles/: main.css
frontend/ui/pages/: 00_Selection.py  01_Interview.py
frontend/ui/public/: custom_audio.html
